--- a/relevador/css/styleLogin.css
+++ b/relevador/css/styleLogin.css
@@ -80,7 +80,7 @@ input {
   border-radius: 3px;
 }
 
-#login fieldset input[type="email"], #login fieldset input[type="password"] {
+#login fieldset input[type="text"], #login fieldset input[type="password"] {
   background: #eee;
   color: #777;
   padding: 4px 10px;
